UtahLiveDataTest/src/objects/FINETVCUST__c.object
<CustomObject>
    <description>This is the custom object for the FINET Vendor</description>
    <fields>
        <fullName>VendorID__c</fullName>
        <label>Vendor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>duns_no__c</fullName>
        <label>DUNS Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lgl_nm__c</fullName>
        <label>Legal Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tin__c</fullName>
        <label>Tax Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vend_cust_cd__c</fullName>
        <externalId>true</externalId>
        <label>Customer Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>FINETVCUST</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>Vendor GG ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FINETVCUST</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>